--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "commonjs",
-  "homepage": "http://ramdevnemath.github.io/TGH-Tech",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
