--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-spinners": "^0.13.8",
-    "react-toast-notifications": "^2.5.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1"
   },
   "devDependencies": {
